--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "description": "Aplicacao do curso",
   "dependencies": {
     "ejs": "^2.5.8",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mysql": "^2.15.0"
   },
   "name": "cdc-server",
   "version": "1.0.0",
