--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "ejs": "^2.5.8",
     "express": "^4.16.3",
+    "express-validator": "^5.1.2",
     "mysql": "^2.15.0"
   },
   "name": "cdc-server",
