--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "description": "Aplicacao do curso",
   "dependencies": {
+    "dotenv": "^5.0.1",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
     "express-validator": "^5.1.2",
